<resources>
    <string name="content_authority" translatable="false">hemal.t.shah.expensetracker
    </string>
    <string name="app_name" translatable="false">Expense Tracker</string>
    <string name="enter_title" translatable="true">Enter Title</string>
    <string name="personal" translatable="true">Personal</string>
    <string name="shared" translatable="true">Shared</string>
    <string name="enter_about" translatable="true">Expense Regarding</string>
    <string name="enter_amount" translatable="true">Amount Spent</string>
    <string name="are_you_sure" translatable="true">Are you sure?</string>
    <string name="delete_confirm" translatable="true">Delete!</string>
    <string name="not_connected_to_internet" translatable="true">You are not connected to the internet!</string>
    <string name="you_will_exit_group" translatable="true">Are you sure you want to leave this shared cluster?</string>
    <string name="exit_confirm" translatable="true">Exit!</string>
    <string name="cancel" translatable="true">Cancel</string>
    <string name="add_expense" translatable="true">New Expense</string>
    <string name="add" translatable="true">Add!</string>
    <string name="error_string_length" translatable="true">Length should be between 3 to 15 characters.</string>
    <string name="create_cluster" translatable="true">Create Cluster</string>
    <string name="sort_a_z" translatable="true">A - Z</string>
    <string name="sort_z_a" translatable="true">Z - A</string>
    <string name="filter" translatable="true">Filter</string>
    <string name="create" translatable="true">Create</string>
    <string name="join_cluster" translatable="true">Join Cluster</string>
    <string name="sort_l_h" translatable="true">Low - High</string>
    <string name="no_description_provided" translatable="true">No description provided.</string>
    <string name="sort_h_l" translatable="true">High - Low</string>
    <string name="describe" translatable="true">Additional Details (Optional)</string>
    <string name="inappropriate_time" translatable="true">Inappropriate Time</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-1222860377755078/9425545344</string>
    <string name="user_name" translatable="true">User Name</string>
    <string name="title_already_present" translatable="true">A cluster with same title already exist.</string>
    <string name="success_cluster" translatable="true">Successfully created new cluster.</string>
    <string name="success_expense" translatable="true">Successfully added new expense.</string>
    <string name="join_instructions" translatable="true">Enter the code you received from your colleague in the following field, and you will be added to their Shared Cluster.</string>
    <string name="enter_code" translatable="true">Enter 6 digit code</string>
    <string name="share" translatable="true">Share</string>
    <string name="add_participant" translatable="true">Add Participant</string>
    <string name="here_is_your_code" translatable="true">Here is your code!</string>
    <string name="other_people" translatable="true">Ask other people to enter this code to join this cluster : </string>
    <string name="join_my_share_cluster" translatable="true">Join my shared cluster on expense tracker using code </string>
    <string name="already_joined" translatable="true">You have already joined this cluster!</string>
    <string name="hold_minute" translatable="true">Hold on a minute.</string>
    <string name="proper_code" translatable="true">Enter proper code</string>
    <string name="restoring_data" translatable="true">Restoring data…</string>
    <string name="hang_on_tight" translatable="true">Loading up your personal data associated with the account, hang on tight…</string>
    <string name="title_activity_settings" translatable="true">Settings</string>

    <string name="successfully_added" translatable="true">You are successfully added to the shared cluster!</string>
    <string name="currency" translatable="true">Currency</string>
    <string name="pref_header_general" translatable="true">General</string>
    <string name="select_one" translatable="true">Select any one of your personal clusters :</string>
    <string name="loading" translatable="true">Loading…</string>
    <string name="add_items_to_this_cluster" translatable="true">Add items to this cluster.</string>
    <string name="ps_notice" translatable="true">P.S. To improve your User Experience, we need you to create at least one Shared Cluster of your very own. If you haven\'t done already, go back and tap the \'+\' button and select \"Shared\" when creating new cluster.</string>
    <string name="data_not_available" translatable="true">Data Not Available. \n</string>
    <string name="status_ok_pc" translatable="true">Tap the \'+\' icon at bottom of screen to add new personal cluster!</string>
    <string name="status_internet_error" translatable="true">You are not connected to the internet. Connect to internet and try again.</string>
    <string name="status_unknown_error" translatable="true">Unknown error has occurred, please sign out and try again.</string>
    <string name="status_ok_sc" translatable="true">Tap the \'+\' icon at bottom of screen to create new Shared Cluster or Join another shared cluster using 6-digit code.</string>
    <string name="status_ok_pe" translatable="true">Start adding new expenses to this cluster by tapping the \'+\' button at the bottom of the screen.</string>
    <string name="status_ok_se" translatable="true" >Tap the \'+\' button at bottom of the screen to add new expenses to this cluster, or wait for other participants to add new expenses. To add participants, tap on the \"Add group members\" button on top of the screen.</string>
    <string name="cd_new_expense" translatable="true">Add new expense</string>
    <string name="cd_delete" translatable="true">Delete</string>
    <string name="cd_new_participant" translatable="true">Add new participant</string>
    <string name="cd_exit_cluster" translatable="true">Exit Cluster</string>
    <string name="cd_profile_photo" translatable="true">User Profile Photo</string>
    <string name="connect_to_internet" translatable="true">Connect to internet and try again later.</string>
    <string name="settings" translatable="true">Settings</string>
    <string name="sign_out" translatable="true">Sign Out</string>
</resources>
