<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_about_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/margin_end_start_et_dialog"
        android:layout_marginStart="@dimen/margin_end_start_et_dialog"
        android:layout_marginTop="@dimen/margin_top_et_dialog"
        android:nextFocusDown="@+id/til_amount_dialog"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_about_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_about"
            android:inputType="text"
            android:maxLength="15" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_amount_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/margin_end_start_et_dialog"
        android:layout_marginStart="@dimen/margin_end_start_et_dialog"
        android:layout_marginTop="@dimen/margin_top_et_dialog"
        android:nextFocusDown="@+id/til_describe_dialog"
        android:nextFocusUp="@id/til_about_dialog"
        app:counterMaxLength="5"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_amount_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_describe_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/margin_end_start_et_dialog"
        android:layout_marginStart="@dimen/margin_end_start_et_dialog"
        android:layout_marginTop="@dimen/margin_top_et_dialog"
        android:nextFocusUp="@id/til_amount_dialog"
        app:counterEnabled="true"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_describe_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/describe"
            android:inputType="textLongMessage" />

    </android.support.design.widget.TextInputLayout>


</LinearLayout>